force-app/main/default/objects/User/fields/AIM_Associate__c.field-meta.xml
<CustomField>
    <fullName>AIM_Associate__c</fullName>
    <label>AIM Cohort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cohort 1</fullName>
            </value>
            <value>
                <fullName>Cohort 2</fullName>
            </value>
            <value>
                <fullName>Cohort 3</fullName>
            </value>
            <value>
                <fullName>Cohort 4</fullName>
            </value>
            <value>
                <fullName>Cohort 5</fullName>
            </value>
            <value>
                <fullName>Cohort 6</fullName>
            </value>
            <value>
                <fullName>Cohort 7</fullName>
            </value>
            <value>
                <fullName>Cohort 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>