force-app/main/default/objects/User/fields/Cognizant_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Cognizant_Employee_ID__c</fullName>
    <description>Cognizant Employee ID for availability on the USER Record</description>
    <externalId>true</externalId>
    <inlineHelpText>Can be found on Be.Cognizant --&gt; People.</inlineHelpText>
    <label>Cognizant Employee ID</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>