force-app/main/default/objects/User/fields/Cognizant_User__c.field-meta.xml
<CustomField>
    <fullName>Cognizant_User__c</fullName>
    <description>Created to help build dashboards and reports for the AIM program and any other Cognizant users using myTrailhead.</description>
    <formula>IF (
CONTAINS ( Email , &apos;cognizant&apos;),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Will be marked as TRUE if user&apos;s email is related to Cognizant</inlineHelpText>
    <label>Cognizant User</label>
    <type>Checkbox</type>
</CustomField>