force-app/main/default/objects/User/fields/DevOps_Alignment__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Alignment__c</fullName>
    <description>This field is used to identify Users that have participated or currently participate in Revenue Management DevOps activities within the US or India.</description>
    <inlineHelpText>This field is used to identify Users that have participated or currently participate in Revenue Management DevOps activities within the US or India. Can be used as a filter for quickly identifying DevOps team Members</inlineHelpText>
    <label>DevOps Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>