force-app/main/default/objects/User/fields/KimbleOne__KimbleCRMMode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__KimbleCRMMode__c</fullName>
    <formula>$Label.kimbleone__crmmode</formula>
    <label>KimbleCRMMode</label>
    <type>Text</type>
</CustomField>