force-app/main/default/objects/User/fields/KimbleOne__RerouteApprovalRequests__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RerouteApprovalRequests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reroute Approval Requests</label>
    <type>Checkbox</type>
</CustomField>