force-app/main/default/objects/User/fields/Sales_Rep_Quota__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Quota__c</fullName>
    <inlineHelpText>Enter Sales Rep yearly quota to be used in reports and dashboards</inlineHelpText>
    <label>Sales Rep Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>