force-app/main/default/objects/User/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <description>HA: Created for NZC Implementation, Purpose: This Field indicates the type of user and his Responsibility.</description>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assurance Provider</fullName>
            </value>
            <value>
                <fullName>Business Admin</fullName>
            </value>
            <value>
                <fullName>Data Approver</fullName>
            </value>
            <value>
                <fullName>Data Modeller</fullName>
            </value>
            <value>
                <fullName>Data Processor</fullName>
            </value>
            <value>
                <fullName>Data Validator</fullName>
            </value>
            <value>
                <fullName>ESG Team</fullName>
            </value>
            <value>
                <fullName>Real Estate Team</fullName>
            </value>
            <value>
                <fullName>Suppliers</fullName>
            </value>
            <value>
                <fullName>System Admin</fullName>
            </value>
            <value>
                <fullName>Scope 3 CF Approver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>