force-app/main/default/objects/User/listViews/ActiveNZCUser.listView-meta.xml
<ListView>
    <fullName>ActiveNZCUser</fullName>
    <booleanFilter>(1 OR 3)  AND 2 AND 4</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>User_Type__c</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Cog Net Zero Cloud Profile</value>
    </filters>
    <filters>
        <field>CREATED_BY_NAME</field>
        <operation>contains</operation>
        <value>NZC System admin</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Platform User - Net Zero Cloud</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active NZC Users</label>
    <language>en_US</language>
</ListView>