force-app/main/default/objects/User/listViews/Cognizant_Users_Requiring_PW_Reset.listView-meta.xml
<ListView>
    <fullName>Cognizant_Users_Requiring_PW_Reset</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>TEST</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>notEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_LOGIN</field>
        <operation>equals</operation>
    </filters>
    <label>Cognizant Users Requiring PW Reset</label>
    <language>en_US</language>
</ListView>